# graphql-proxy

./: .env  Cargo.toml  README.md  run-server.sh
graphql-proxy-frontend/: package-lock.json  package.json
graphql-proxy-frontend/src/: App.tsx
graphql-proxy-frontend/src/components/: Message.tsx
graphql-proxy-frontend/src/model/: message_data.ts
src/: admin_state.rs  app_state.rs  cli.rs  cli_query.rs  control_state.rs  error.rs  main.rs  utils.rs
src/endpoints/: graphql_proxy.rs  graphql_ws_proxy.rs  mod.rs  router.rs
src/graphql_queries/: subscribe-to-messages.graphql
src/model/: mod.rs  mutation.rs  query.rs  subscription.rs
src/model/enums/: augmentation_type.rs  character_race.rs  connection_type.rs  filter_type.rs  message_direction.rs  mod.rs  payload_type.rs
src/model/inputs/: character_creation_input.rs  message_filter.rs  mod.rs
src/model/interfaces/: augmented_character.rs  character.rs  mod.rs
src/model/scalars/: header_name_scalar.rs  header_value_scalar.rs  id.rs  mod.rs
src/model/types/: augmentation.rs  cyborg.rs  graphql_endpoints.rs  header.rs  headers.rs  human.rs  message.rs  mod.rs  user.rs
tools/: get-config.sh  install.sh  subscribe-to-messages.sh
tools/queries/: get-config.graphql
